	testsuite/Makefile.am, testsuite/Emakefile.in: Renamed test for
	`exmpp_stream'.

	* src/core/exmpp_factory.erl, src/client/exmpp_client_legacy_auth.erl,
	src/server/exmpp_server_legacy_auth.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am,
	testsuite/check_factory_legacy_auth.erl: Moved legacy authentication
	handling to dedicated modules.

2007-03-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/comp: Renamed `src/comp' to `src/compat'.

	* src/exmpp_factory.erl: Move to `src/core'; some code still needs to
	be moved in appropriate modules in `src/server' or `src/client'.

	* src/Makefile.am, src/Emakefile.in, ebin/Makefile.am,
	ebin/exmpp.app.in, testsuite/check_coverity.erl: Updates to take into
	account new `src' layout.

2007-03-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl: Restore DRIVER_NAME value. Style.
	(get_cdata): Changed return value of the new function clause to the
	`false', like related functions.

2007-03-06  Christophe Romain  <christophe.romain@process-one.net>

	* src/exmpp_factory.erl: Add functions to delete a pubsub node.

	* src/*.erl: Reorganize source files in separate subdirectories.

2007-03-05  Mickaël Rémond  <mickael.remond@process-one.net>

	* src/exmpp_xml.erl (get_cdata): Handle a false value. This clause
	make it possible to write code like:
	exmpp_xml:get_cdata(exmpp_xml:get_element_by_name(XML_El, body))

2007-03-04  Mickaël Rémond  <mickael.remond@process-one.net>

	* src/exmpp_xml.erl: Added get_element_by_ns/2. This function is
	useful to extract XMPP error codes (to make sure you are getting the
	correct tag).

2007-03-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Remove checks for `kernel' and `stdlib' Erlang
	applications. They're not used at build time.

	* testsuite/test.sh: Fixed IFS variable because the TESTS variable
	contains Tab characters.

	* c_src/expat_drv.c, c_src/exmpp_expat_drv.c, c_src/Makefile.am,